<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Bill24OnlinePaymentSdk</string>
    <string name="power_by">power by </string>
    <string name="payment_way">Payment method</string>
    <string name="expire_title">Transaction expired</string>
    <string name="try_again_title">Please try again</string>
    <string name="try_again">Try again</string>
    <string name="scan_to_pay">Scan to pay</string>
    <string name="or">Or</string>
    <string name="download">Download</string>
    <string name="share">Share</string>
    <string name="total_amount">Total Amount</string>
    <string name="fee">Fee</string>
    <string name="total_amount_display">237.57</string>
    <string name="usd">USD</string>
    <string name="bill24">Bill24</string>
    <string name="version">V1.0.0.0</string>
    <string name="khqr">ទូទាត់តាម រយះ KHQR</string>
    <string name="image_saved">Save image success !</string>
    <string name="image_unsave">Save image fail !</string>
    <string name="invoice_already_paid">Invoice already paid</string>
    <string name="already">Already</string>
    <string name="total">Total :</string>
    <string name="transaction_date">Transaction Date</string>
    <string name="transaction">Transaction #</string>
    <string name="bank_ref">Bank Ref #</string>
    <string name="to_merchant">To Merchant</string>
    <string name="done">Done</string>
</resources>