<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottom_payment_method_container"
    android:layout_gravity="bottom"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dimen_size75"
    android:layout_marginBottom="30dp"
    android:background="#D83838">
    <FrameLayout
        android:id="@+id/bottom_dash_line_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bottom_sheet_dash_line_shape"
        android:layout_marginTop="5dp"
        android:layout_marginRight="-5dp"
        android:layout_marginLeft="-5dp"
        android:layout_gravity="center"
        android:layout_marginBottom="-5dp"
        >
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_marginStart="20dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center|start"
            android:orientation="vertical">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_total_amount_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_amount"
                android:textSize="11sp"
                />
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/text_total_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="21sp"
                    android:text="@string/total_amount_display"
                    android:fontFamily="@font/roboto_bold"
                    android:layout_marginEnd="@dimen/dimen_size7_25"
                    />
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/text_total_amount_currency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/usd"
                    android:textSize="14sp"
                    android:fontFamily="@font/roboto_bold"
                    />
            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_gravity="center|end"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginEnd="20dp"
            android:gravity="bottom"
            android:paddingBottom="15dp">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_power_by"
                android:layout_gravity="end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/power_by"
                android:textStyle="italic"
                android:textSize="8sp"
                android:fontFamily="@font/roboto_regular"
                android:layout_marginBottom="4dp"
                />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/bill24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bill24"
                    android:fontFamily="@font/roboto_medium"
                    android:textSize="10sp"
                    />
                <com.google.android.material.divider.MaterialDivider
                    android:id="@+id/vertical_divider"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="5dp"
                    android:layout_marginVertical="3dp"
                    />
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/text_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/version"
                    android:textSize="10sp"
                    android:fontFamily="@font/roboto_regular"
                    />
            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.appcompat.widget.LinearLayoutCompat>
    </FrameLayout>


</FrameLayout>