<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/expire_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    >
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_size20"
        android:src="@drawable/warning_icon"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_expire_title"
        android:layout_marginTop="@dimen/dimen_size20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expire_title"
        android:textColor="@color/black"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/expire_dash_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dash_line_horizontal"
        android:layout_marginTop="@dimen/dimen_size20"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_try_again_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/try_again_title"
        android:layout_marginTop="@dimen/dimen_size20"
        android:textColor="@color/black"
        />

    <FrameLayout
        android:id="@+id/button_try_again"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/try_again"
        android:background="#D52C2C"
        android:layout_marginHorizontal="@dimen/dimen_size20"
        android:layout_marginTop="@dimen/dimen_size30"
        android:layout_marginBottom="18dp"
        >
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_button_try_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/try_again"
            android:layout_gravity="center"
            />



    </FrameLayout>

</androidx.appcompat.widget.LinearLayoutCompat>