<?xml version="1.0" encoding="utf-8"?>
    <FrameLayout
            android:id="@+id/container_bank_item_first_layer"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="11dp"
            android:layout_marginHorizontal="@dimen/payment_card_horizontal"
            xmlns:app="http://schemas.android.com/apk/res-auto"
        >
    <FrameLayout
        android:id="@+id/container_bank_item_second_layer"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:padding="@dimen/dimen_size10">
        <!--   bank icon bank name-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/bank_name_icon_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginEnd="@dimen/dimen_size50">
            <androidx.cardview.widget.CardView
                android:id="@+id/bank_image_background"
                android:background="#CA1818"
                android:layout_width="@dimen/dimen_size40"
                android:layout_height="@dimen/dimen_size40"
                app:cardElevation="0dp"
                app:cardCornerRadius="6dp">
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/image_bank_icon"
                    android:layout_width="@dimen/dimen_size40"
                    android:layout_height="@dimen/dimen_size40"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/placeholder_image"
                    />
            </androidx.cardview.widget.CardView>


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_marginStart="12.5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/text_bank_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:gravity="top"
                    android:layout_gravity="top"
                    android:text="@string/khqr"
                    />
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/container_fee"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_gravity="bottom"
                    android:gravity="bottom"
                    >
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/text_payment_service_title"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textColor="#707070"
                        android:text="@string/fee"
                        android:textSize="12sp"
                        android:fontFamily="@font/roboto_regular"
                        android:gravity="bottom"
                        />
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/text_semicolon"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text=":"
                        android:layout_marginEnd="5dp"
                        android:gravity="bottom">

                    </androidx.appcompat.widget.AppCompatTextView>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/text_payment_service_amount"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textColor="#707070"
                        android:fontFamily="@font/roboto_regular"
                        android:textSize="12sp"
                        android:text="@string/total_amount_display"
                        android:gravity="bottom"
                        />
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/text_payment_service_currency"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="#707070"
                        android:fontFamily="@font/roboto_regular"
                        android:textSize="12sp"
                        android:text="@string/usd"
                        android:gravity="bottom"
                        />
                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--    add to favorite-->
        <FrameLayout
            android:id="@+id/add_to_favorite_container"
            android:layout_gravity="end|center"
            android:layout_width="@dimen/dimen_size40"
            android:layout_height="@dimen/dimen_size40"
            android:layout_toRightOf="@+id/bank_name_icon_container"
            android:background="@drawable/favorite_select_item_state"
            android:visibility="visible">


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image_favorite_icon"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/un_favorite_icon"/>
        </FrameLayout>
    </FrameLayout>

        </FrameLayout>

<!--</androidx.cardview.widget.CardView>-->